--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: aqua;
+    background-color: rgb(91, 114, 114);
     padding: 20px;
 }
 
