--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,14 @@ body {
     color: rgb(34, 46, 56)
 }
 
+.entryContainer {
+    display: flex;
+    flex-direction: column;
+    max-width: 300px;
+    gap: 4;
+
+}
+
 input {
     padding: 8px;
     font-size: 16px;
@@ -31,6 +39,7 @@ input {
     background-color: orange;
     border: none;
     cursor: pointer;
+    margin-top: 12px;
 }
 
 #submitButton:hover {
